		MoveBy/To, JumpBy/To, BezierTo/By, CatmullRomTo/By and CardinalSplineTo/By won't override the results of previous actions.
. [NEW] GLProgram: Added uniformLocationForName: method
. [FIX] Director: replaced lenght with lenght
		Fixed 2 memory leaks in createStatsLabel
		willRotateToInterfaceOrientation is propagated to the delegate
. [FIX] EaseActions: "other_" ivar renamed to "_inner". It is a property now
. [FIX] Effects: ccGridSize is no longer used. It was replaced by CGPoint and CGSize
		API fixes: The first parameters that is received is the duration of the action. This is consistent with the actions API.
		API fixes: parameter "grid" was renamed to "size"
. [FIX] externals: All JS related projects are in the externals/JavaScript subfolder
. [FIX] Layer: _touchPriority is an NSInteger, not a BOOL (issue #1449)
. [FIX] MenuItem: "releaseBlockAtCleanup" enabled by default. Rolls back behavior from v2.1-beta4
. [FIX] RenderTexture: Restures the Projection after using it.
. [3RD] CCBReader: is a submodule in github. Using lastest stable version
. [3RD] JRSwizzle: is a submodule
. [3RD] JS Bindings: Updated to v0.5

version 2.1-beta4  4-Dec-2012
. [NEW] FileUtils: Supports iPhone5 resources (-wide, -widehd)
		Option to search "resolution resources" in "resolution directores", instead of using "resolution suffixes".
		Option to search resources in different subdirectories (good for themes, cache, etc.)
		Add method to search resources not associated with any resolution (ideal for music, shaders, etc.)
. [FIX] From cocos2d v1.1-rc0:
		Animate Action: Works as expected when display frame rate > than FPS (issue #1438)
. [FIX] Actions: Fixed CCRotateTo, startAngleX now is modded similar to startAngleY to keep the rotation values the same
. [FIX] CocosDenshion: Mute can be called before loading a file (issue #1434)
		By default it uses cocos2d fileutils. Define CD_USE_OWN_FILEUTILS to use CD fileutils