@@ -5,6 +5,7 @@ version 2.1-rc0	 XX-Jan-2013
 . [FIX] Director: replaced lenght with lenght
 		Fixed 2 memory leaks in createStatsLabel
 		willRotateToInterfaceOrientation is propagated to the delegate
+		Frees DrawingPrimitives resources (issue #1456)
 . [FIX] EaseActions: "other_" ivar renamed to "_inner". It is a property now
 . [FIX] Effects: ccGridSize is no longer used. It was replaced by CGPoint and CGSize
 		API fixes: The first parameters that is received is the duration of the action. This is consistent with the actions API.
